# A2A_xrpl_mcp

./: .gitignore  .spacesconfig-docker.yaml  .spacesconfig.yaml  Dockerfile  EXPLANATION.md  HACKATHON_CHECKLIST.md  HUGGINGFACE_DEPLOYMENT.md  LICENSE  MCP_A2A_Trace_Logger_README.md  MCP_INTEGRATION_DESIGN.md  PROJECT_STATUS.md  QUICK_START.md  README.md  README_HACKATHON.md  README_JA.md  README_SPACE.md  README_SPACES.md  a2a_xrpl_spec.md  app.py  app_hf.py  claude.md  demo_full_anchor.py  demo_haiku_ipfs.py  demo_haiku_trace.py  demo_interactive.html  demo_simple_explanation.py  haiku_agent.py  index.html  main.py  pyproject.toml  requirements-mcp.txt  requirements.txt  run_mcp_demo.sh  test_mcp_basic.py  trace_viewer.html  verify_ipfs.py
a2a_anchor/: __init__.py  anchor_service.py  ipfs_client.py  merkle.py  trace_builder.py  trace_schema.py  verify.py  xrpl_client.py
logs/: events.jsonl
mcp/: __init__.py  app.py  logger.py  mcp_client.py  mcp_server.py  mcp_trace_builder.py
tests/: test_ipfs.py  test_xrpl.py
traces/: session-01725fa33197.json  session-0bd2c2643420.json  session-0f19ab94789f.json  session-1984a1a429f6.json  session-28232a778fb6.json  session-358a663ab793.json  session-3707c4e71ace.json  session-4462d4068b63.json  session-4faba1bdfa3d.json  session-5810c196fa1a.json  session-61c2c716d7a4.json  session-67418b963471.json  session-6e64e1668576.json  session-7279ff80fce5.json  session-8abddd6f9965.json  session-8ed7330f1ad5.json  session-90295f78708c.json  session-9c866ef25ab0.json  session-b50c65f9d9ee.json  session-b74f125b2a9c.json  (+6 more)
